Implement lab3